[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
base16ct = { version = "0.2.0", features = ["std"] }
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.20", features = ["derive"] }
flate2 = "1.0.34"
jiff = { version = "0.1.14", features = ["tz-system"] }
sha1 = "0.10.6"
thiserror = "1.0.38"                             # error handling
